--- a/pom.xml
+++ b/pom.xml
@@ -19,13 +19,18 @@
         <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
+        <!-- Dependency versions -->
+      
         <junit.version>5.9.3</junit.version>
         <mockito.version>4.11.0</mockito.version>
+        <testfx.version>4.0.16-alpha</testfx.version>
         <mongodb.version>4.9.1</mongodb.version>
         <mysql.version>8.0.33</mysql.version>
         <hibernate.version>6.2.2.Final</hibernate.version>
-
+        
+        <!-- SonarCloud configuration -->
         <jacoco.version>0.8.8</jacoco.version>
+        <sonar.organization>irfancpv99</sonar.organization>
         <pitest.version>1.14.1</pitest.version>
     </properties>
 
@@ -79,6 +84,26 @@
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-core</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>testfx-junit5</artifactId>
+            <version>${testfx.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Monocle for headless TestFX -->
+        <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-11+26</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Testcontainers for Docker -->
         <dependency>
@@ -118,12 +143,30 @@
                 </configuration>
             </plugin>
 
-            <!-- Surefire for Unit & Integration Tests -->
+            <!-- Surefire for Tests -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
+                <configuration>
+                    <systemPropertyVariables>
+                        <testfx.robot>glass</testfx.robot>
+                        <testfx.headless>true</testfx.headless>
+                        <prism.order>sw</prism.order>
+                        <prism.text>t2k</prism.text>
+                    </systemPropertyVariables>
+                </configuration>
             </plugin>
+			
+			
+			<plugin>
+			    <groupId>org.codehaus.mojo</groupId>
+			    <artifactId>exec-maven-plugin</artifactId>
+			    <version>3.1.0</version>
+			    <configuration>
+			        <mainClass>com.todoapp.TodoApplication</mainClass>
+			    </configuration>
+			</plugin>
 
             <!-- JaCoCo Coverage -->
             <plugin>
@@ -201,6 +244,12 @@
                 </configuration>
             </plugin>
 
+            <!-- SonarQube -->
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.9.1.2184</version>
+            </plugin>
         </plugins>
     </build>
 </project>
