--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <!-- Dependency versions -->
-      
         <junit.version>5.9.3</junit.version>
         <mockito.version>4.11.0</mockito.version>
         <testfx.version>4.0.16-alpha</testfx.version>
@@ -149,24 +148,40 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
+                    <argLine>
+                        -Djava.awt.headless=true
+                        -Dtestfx.robot=glass
+                        -Dtestfx.headless=true
+                        -Dprism.order=sw
+                        -Dprism.text=t2k
+                        -Dmonocle.platform=Headless
+                        -Dglass.platform=Monocle
+                        @{argLine}
+                    </argLine>
                     <systemPropertyVariables>
+                        <java.awt.headless>true</java.awt.headless>
                         <testfx.robot>glass</testfx.robot>
                         <testfx.headless>true</testfx.headless>
                         <prism.order>sw</prism.order>
                         <prism.text>t2k</prism.text>
+                        <monocle.platform>Headless</monocle.platform>
+                        <glass.platform>Monocle</glass.platform>
                     </systemPropertyVariables>
+                    <environmentVariables>
+                        <DISPLAY>:99.0</DISPLAY>
+                    </environmentVariables>
                 </configuration>
             </plugin>
-			
-			
-			<plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>exec-maven-plugin</artifactId>
-			    <version>3.1.0</version>
-			    <configuration>
-			        <mainClass>com.todoapp.TodoApplication</mainClass>
-			    </configuration>
-			</plugin>
+            
+            <!-- Exec Plugin for Running Application -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>com.todoapp.TodoApplication</mainClass>
+                </configuration>
+            </plugin>
 
             <!-- JaCoCo Coverage -->
             <plugin>
@@ -241,6 +256,9 @@
                         <outputFormat>XML</outputFormat>
                     </outputFormats>
                     <mutationThreshold>100</mutationThreshold>
+                    <jvmArgs>
+                        <jvmArg>-Djava.awt.headless=true</jvmArg>
+                    </jvmArgs>
                 </configuration>
             </plugin>
 
