--- a/pom.xml
+++ b/pom.xml
@@ -22,14 +22,10 @@
         <!-- Dependency versions -->
         <junit.version>5.9.3</junit.version>
         <mockito.version>4.11.0</mockito.version>
-        <testfx.version>4.0.16-alpha</testfx.version>
         <mongodb.version>4.9.1</mongodb.version>
         <mysql.version>8.0.33</mysql.version>
         <hibernate.version>6.2.2.Final</hibernate.version>
-        
-        <!-- SonarCloud configuration -->
         <jacoco.version>0.8.8</jacoco.version>
-        <sonar.organization>irfancpv99</sonar.organization>
         <pitest.version>1.14.1</pitest.version>
     </properties>
 
@@ -83,24 +79,18 @@
             <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>testfx-core</artifactId>
-            <version>${testfx.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>testfx-junit5</artifactId>
-            <version>${testfx.version}</version>
-            <scope>test</scope>
-        </dependency>
 
-        <!-- Monocle for headless TestFX -->
+        <!-- AssertJ Swing for GUI Testing -->
         <dependency>
-            <groupId>org.testfx</groupId>
-            <artifactId>openjfx-monocle</artifactId>
-            <version>jdk-11+26</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-swing-junit</artifactId>
+            <version>3.17.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>3.24.2</version>
             <scope>test</scope>
         </dependency>
 
@@ -123,6 +113,8 @@
             <version>1.18.0</version>
             <scope>test</scope>
         </dependency>
+
+        <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
@@ -147,36 +139,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0</version>
-                <configuration>
-                    <!-- Exclude GUI tests from default test run -->
-                    <excludes>
-                        <exclude>**/gui/**/*Test.java</exclude>
-                    </excludes>
-                    <argLine>
-                        -Djava.awt.headless=true
-                        -Dtestfx.robot=glass
-                        -Dtestfx.headless=true
-                        -Dprism.order=sw
-                        -Dprism.text=t2k
-                        -Dmonocle.platform=Headless
-                        -Dglass.platform=Monocle
-                        @{argLine}
-                    </argLine>
-                    <systemPropertyVariables>
-                        <java.awt.headless>true</java.awt.headless>
-                        <testfx.robot>glass</testfx.robot>
-                        <testfx.headless>true</testfx.headless>
-                        <prism.order>sw</prism.order>
-                        <prism.text>t2k</prism.text>
-                        <monocle.platform>Headless</monocle.platform>
-                        <glass.platform>Monocle</glass.platform>
-                    </systemPropertyVariables>
-                    <environmentVariables>
-                        <DISPLAY>:99.0</DISPLAY>
-                    </environmentVariables>
-                </configuration>
             </plugin>
-            
+
             <!-- Exec Plugin for Running Application -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -192,12 +156,6 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>${jacoco.version}</version>
-                <configuration>
-                    <!-- Exclude GUI classes from coverage analysis -->
-                    <excludes>
-                        <exclude>com/todoapp/gui/**</exclude>
-                    </excludes>
-                </configuration>
                 <executions>
                     <execution>
                         <goals>
@@ -211,30 +169,10 @@
                             <goal>report</goal>
                         </goals>
                     </execution>
-                    <execution>
-                        <id>jacoco-check</id>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <rule>
-                                    <element>BUNDLE</element>
-                                    <limits>
-                                        <limit>
-                                            <counter>INSTRUCTION</counter>
-                                            <value>COVEREDRATIO</value>
-                                            <minimum>1.00</minimum>
-                                        </limit>
-                                    </limits>
-                                </rule>
-                            </rules>
-                        </configuration>
-                    </execution>
                 </executions>
             </plugin>
 
-            <!-- PITest Mutation Testing - OPTIMIZED -->
+            <!-- PITest Mutation Testing -->
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
@@ -247,36 +185,36 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <!-- Target only business logic classes -->
                     <targetClasses>
                         <param>com.todoapp.model.*</param>
                         <param>com.todoapp.repository.*</param>
-                        <param>com.todoapp.repository.mongo.*</param>
-                        <param>com.todoapp.repository.mysql.*</param>
                         <param>com.todoapp.service.*</param>
                         <param>com.todoapp.config.*</param>
+                        <param>com.todoapp.gui.MainFrameController</param>
+                        <param>com.todoapp.gui.TodoTableModel</param>
                     </targetClasses>
+
+                    <!-- Run all tests except GUI E2E and Integration tests -->
                     <targetTests>
                         <param>com.todoapp.*</param>
                     </targetTests>
+
+                    <!-- Exclude GUI E2E and Integration tests -->
                     <excludedTestClasses>
-                        <param>com.todoapp.gui.*</param>
-                    </excludedTestClasses>
+                        <param>com.todoapp.gui.MainFrameE2ETest</param>
+                        <param>com.todoapp.gui.MainFrameIntegrationTest</param>
+                     </excludedTestClasses>
+
                     <outputFormats>
                         <outputFormat>HTML</outputFormat>
                         <outputFormat>XML</outputFormat>
                     </outputFormats>
-                    <mutationThreshold>90</mutationThreshold>
-                    <!-- Increase timeout for Testcontainers -->
+
+                    <mutationThreshold>100</mutationThreshold>
                     <timeoutConstant>10000</timeoutConstant>
                     <timeoutFactor>3.0</timeoutFactor>
-                    <!-- Use more threads for faster execution -->
                     <threads>4</threads>
-                    <!-- Enable verbose output for debugging -->
-                    <verbose>false</verbose>
-                    <jvmArgs>
-                        <jvmArg>-Djava.awt.headless=true</jvmArg>
-                        <jvmArg>-Xmx2048m</jvmArg>
-                    </jvmArgs>
                 </configuration>
             </plugin>
 
@@ -288,77 +226,4 @@
             </plugin>
         </plugins>
     </build>
-
-    <!-- Profiles for different test scenarios -->
-    <profiles>
-        <!-- Default profile: excludes GUI tests -->
-        <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-        </profile>
-
-        <!-- Profile to run ALL tests including GUI tests -->
-        <profile>
-            <id>with-gui-tests</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <configuration>
-                            <!-- Include all tests -->
-                            <excludes>
-                                <exclude>none</exclude>
-                            </excludes>
-                            <argLine>
-                                -Djava.awt.headless=true
-                                -Dtestfx.robot=glass
-                                -Dtestfx.headless=true
-                                -Dprism.order=sw
-                                -Dprism.text=t2k
-                                -Dmonocle.platform=Headless
-                                -Dglass.platform=Monocle
-                                @{argLine}
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <!-- Profile to run ONLY GUI tests -->
-        <profile>
-            <id>gui-tests-only</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0</version>
-                        <configuration>
-                            <includes>
-                                <include>**/gui/**/*Test.java</include>
-                            </includes>
-                            <excludes>
-                                <exclude>none</exclude>
-                            </excludes>
-                            <argLine>
-                                -Djava.awt.headless=true
-                                -Dtestfx.robot=glass
-                                -Dtestfx.headless=true
-                                -Dprism.order=sw
-                                -Dprism.text=t2k
-                                -Dmonocle.platform=Headless
-                                -Dglass.platform=Monocle
-                                @{argLine}
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
