--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -125,7 +125,6 @@ jobs:
           name: TDD-Coverage-Report
 
       - name: Cache SonarCloud packages
-        if: secrets.SONAR_TOKEN != ''
         uses: actions/cache@v4
         with:
           path: ~/.sonar/cache
@@ -133,26 +132,25 @@ jobs:
           restore-keys: ${{ runner.os }}-sonar
 
       - name: Run SonarCloud Analysis (TDD Quality Gate)
-        if: secrets.SONAR_TOKEN != ''
         continue-on-error: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          mvn sonar:sonar \
-            -Dsonar.projectKey=irfancpv99_TodoTag-Manager \
-            -Dsonar.organization=irfancpv99 \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-
-      - name: SonarCloud Status
-        if: secrets.SONAR_TOKEN == ''
-        run: |
-          echo "⚠️  SonarCloud analysis skipped - SONAR_TOKEN not configured"
-          echo "To enable SonarCloud:"
-          echo "1. Go to https://sonarcloud.io"
-          echo "2. Import your project"
-          echo "3. Add SONAR_TOKEN to GitHub Secrets"
+          if [ -n "$SONAR_TOKEN" ]; then
+            echo "Running SonarCloud analysis..."
+            mvn sonar:sonar \
+              -Dsonar.projectKey=irfancpv99_TodoTag-Manager \
+              -Dsonar.organization=irfancpv99 \
+              -Dsonar.host.url=https://sonarcloud.io \
+              -Dsonar.token=$SONAR_TOKEN
+          else
+            echo "⚠️  SonarCloud analysis skipped - SONAR_TOKEN not configured"
+            echo "To enable SonarCloud:"
+            echo "1. Go to https://sonarcloud.io"
+            echo "2. Import your project"
+            echo "3. Add SONAR_TOKEN to GitHub Secrets"
+          fi
 
       - name: Upload Test Results
         uses: actions/upload-artifact@v4
