--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: TDD CI/CD Pipeline
+name: Java CI with Maven
 
 on:
   push:
@@ -8,27 +8,12 @@ on:
 
 env:
   JAVA_VERSION: 17
-  MAVEN_OPTS: "-Dmaven.repo.local=.m2/repository -Dorg.slf4j.simpleLogger.log.org.apache.maven.cli.transfer.Slf4jMavenTransferListener=WARN"
 
 jobs:
-  validate-tdd:
-    name: Validate TDD Approach
+  build-and-test:
+    name: Build and Test
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Validate TDD commit messages
-        run: |
-          echo "Validating TDD commit pattern..."
-          git log --oneline -10 | grep -E "(RED:|GREEN:|REFACTOR:)" || echo "TDD commit pattern validation"
-          echo "TDD validation completed"
-
-  test:
-    name: Test Suite
-    runs-on: ubuntu-latest
+    
     services:
       mongodb:
         image: mongo:6.0
@@ -54,205 +39,80 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 17
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Wait for services
-        run: |
-          echo "Waiting for database services..."
-          while ! nc -z localhost 27017; do sleep 2; done
-          echo "MongoDB ready"
-          while ! nc -z localhost 3306; do sleep 2; done
-          echo "MySQL ready"
-          echo "All services ready for TDD tests"
+          cache: 'maven'
 
       - name: Setup Xvfb for GUI tests
         run: |
           sudo apt-get update
           sudo apt-get install -y xvfb libxrender1 libxtst6 libxi6
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          sleep 3
-          echo "Virtual display server started on :99"
 
-      - name: Run Unit Tests (TDD Red-Green-Refactor)
-        run: mvn clean test -Dtest="**/*Test.java" -Dmaven.test.failure.ignore=false
+      - name: Run tests with coverage
+        run: mvn clean verify
         env:
           DISPLAY: :99
 
-      - name: Run Integration Tests (TDD Integration Layer)
-        run: |
-          if find src/test/java -name "*IntegrationTest.java" 2>/dev/null | grep -q .; then
-            mvn test -Dtest="**/*IntegrationTest.java"
-          else
-            echo "No integration tests found - skipping"
-          fi
-        env:
-          DISPLAY: :99
-
-      - name: Run E2E Tests (TDD Complete Workflows)
-        run: |
-          if find src/test/java -name "*E2ETest.java" 2>/dev/null | grep -q .; then
-            mvn test -Dtest="**/*E2ETest.java"
-          else
-            echo "No E2E tests found - skipping"
-          fi
-        env:
-          DISPLAY: :99
-
-      - name: Generate Code Coverage Report
-        run: mvn jacoco:report
-
-      - name: Enforce Code Coverage (TDD Best Practice)
-        run: mvn jacoco:check || echo "Coverage enforcement - project building towards 100%"
-
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v4
-        if: always()
-        continue-on-error: true
+      - name: Upload coverage to Coveralls
+        uses: coverallsapp/github-action@v2
         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           file: target/site/jacoco/jacoco.xml
-          flags: tdd-tests
-          name: TDD-Coverage-Report
 
-      - name: Cache SonarCloud packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Run SonarCloud Analysis (TDD Quality Gate)
-        continue-on-error: true
+      - name: Run SonarCloud Analysis
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
-          if [ -n "$SONAR_TOKEN" ]; then
-            echo "Running SonarCloud analysis..."
-            mvn sonar:sonar \
-              -Dsonar.projectKey=irfancpv99_TodoTag-Manager \
-              -Dsonar.organization=irfancpv99 \
-              -Dsonar.host.url=https://sonarcloud.io \
-              -Dsonar.token=$SONAR_TOKEN
-          else
-            echo "⚠️  SonarCloud analysis skipped - SONAR_TOKEN not configured"
-            echo "To enable SonarCloud:"
-            echo "1. Go to https://sonarcloud.io"
-            echo "2. Import your project"
-            echo "3. Add SONAR_TOKEN to GitHub Secrets"
-          fi
+          mvn sonar:sonar \
+            -Dsonar.projectKey=irfancpv99_TodoTag-Manager \
+            -Dsonar.organization=irfancpv99 \
+            -Dsonar.host.url=https://sonarcloud.io
 
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v4
+      - name: Upload test results
         if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: tdd-test-results
-          path: |
-            target/surefire-reports/
-            target/site/jacoco/
+          name: test-results
+          path: target/surefire-reports/
           retention-days: 30
 
   mutation-testing:
-    name: Mutation Testing (TDD Quality)
+    name: Mutation Testing
     runs-on: ubuntu-latest
-    needs: test
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    needs: build-and-test
+    if: github.ref == 'refs/heads/main'
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
         uses: actions/setup-java@v4
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: 'temurin'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          cache: 'maven'
 
       - name: Setup Xvfb for GUI tests
         run: |
           sudo apt-get update
           sudo apt-get install -y xvfb libxrender1 libxtst6 libxi6
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          sleep 3
 
       - name: Run PIT Mutation Testing
-        run: mvn clean test org.pitest:pitest-maven:mutationCoverage
+        run: mvn test org.pitest:pitest-maven:mutationCoverage
         env:
           DISPLAY: :99
 
-      - name: Upload Mutation Test Results
-        uses: actions/upload-artifact@v4
+      - name: Upload mutation results
         if: always()
+        uses: actions/upload-artifact@v4
         with:
-          name: tdd-mutation-results
+          name: mutation-results
           path: target/pit-reports/
           retention-days: 30
-
-  build-application:
-    name: Build TDD Application
-    runs-on: ubuntu-latest
-    needs: test
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: ${{ env.JAVA_VERSION }}
-          distribution: 'temurin'
-
-      - name: Cache Maven packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Build TDD Application
-        run: mvn clean package -DskipTests
-
-      - name: Upload Application Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: tdd-todo-manager
-          path: target/*.jar
-          retention-days: 30
-
-  validate-tdd-quality:
-    name: TDD Quality Gate
-    runs-on: ubuntu-latest
-    needs: [test, build-application]
-    if: always()
-    steps:
-      - name: TDD Quality Summary
-        run: |
-          echo "✅ TDD Development Quality Summary"
-          echo "=================================="
-          echo "✅ Unit Tests: Completed"
-          echo "✅ Integration Tests: Completed"
-          echo "✅ E2E Tests: Completed"
-          echo "✅ Code Coverage: Generated"
-          echo "✅ Application Build: Success"
-          echo ""
-          if [ "${{ github.ref }}" == "refs/heads/main" ]; then
-            echo "🧬 Mutation Testing: Enabled on main branch"
-          fi
-          echo ""
-          echo "🎯 Quality Gate: PASSED"
