--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,11 +81,11 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb libxrender1 libxtst6 libxi6
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          sleep 3
+          sleep 5
           echo "Virtual display server started on :99"
 
       - name: Run Unit Tests (TDD Red-Green-Refactor)
-        run: mvn clean test -Dtest="**/*Test.java" -Dmaven.test.failure.ignore=false
+        run: mvn clean test -Dtest="**/*Test.java,!**/*E2ETest.java,!**/*IntegrationTest.java" -Dmaven.test.failure.ignore=false
         env:
           DISPLAY: :99
 
@@ -175,7 +175,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xvfb libxrender1 libxtst6 libxi6
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          sleep 3
+          sleep 5
 
       - name: Run PIT Mutation Testing
         run: mvn clean test org.pitest:pitest-maven:mutationCoverage
