--- a/pom.xml
+++ b/pom.xml
@@ -169,6 +169,13 @@
                         <goals>
                             <goal>report</goal>
                         </goals>
+                        <configuration>
+                            <excludes>
+                                <!-- Exclude GUI implementation files (not controller) -->
+                                <exclude>com/todoapp/gui/MainFrame.class</exclude>
+                                <exclude>com/todoapp/gui/MainFrame$*.class</exclude>
+                            </excludes>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -186,7 +193,7 @@
                     </dependency>
                 </dependencies>
                <configuration>
-    <!-- Run mutation testing ONLY on business logic + controller -->
+    	<!-- Run mutation testing ONLY on business logic + controller -->
 			    <targetClasses>
 			        <param>com.todoapp.model.*</param>
 			        <param>com.todoapp.repository.*</param>
@@ -199,16 +206,16 @@
 			
 			    <!-- EXCLUDE GUI TEST FILES -->
 			    <excludedTestClasses>
-			        <param>com.todoapp.gui.*Test</param>
 			        <param>com.todoapp.gui.*E2ETest</param>
 			    </excludedTestClasses>
 			
-			    <!-- EXCLUDE ALL GUI IMPLEMENTATION CLASSES EXCEPT CONTROLLER -->
+			    <!-- EXCLUDE GUI IMPLEMENTATION CLASSES -->
 			    <excludedClasses>
-			        <param>com.todoapp.gui.*</param>
+			        <param>com.todoapp.gui.MainFrame</param>
+				        <param>com.todoapp.gui.MainFrame$*</param>
 			    </excludedClasses>
 			
-			    <!-- Force headless mode so Swing doesn't crash PIT -->
+			    <!-- Force headless mode  -->
 			    <jvmArgs>
 			        <param>-Djava.awt.headless=true</param>
 			    </jvmArgs>
